<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/warning" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_1"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_2"
            android:textColor="#000000"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birth_date"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spinnerDay"
            android:layout_width="100dp"
            android:layout_height="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/spinnerMonth"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/spinnerYear"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_sex"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerSex"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textStyle"
        android:text="@string/info_5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textStyle"
        android:text="@string/info_4"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/info_3"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/pulse_1"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,LabelFor,TextFields"
            android:autofillHints="           " />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textStyle"
        android:text="@string/text_1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textStyle"
        android:text="@string/text_2"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:text="@string/text_6"
            android:textSize="13sp"/>

        <EditText
            android:id="@+id/pulse_2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,LabelFor,TextFields"
            android:autofillHints="           " />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textStyle"
        android:text="@string/text_7"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/clock"
            android:contentDescription="@string/todo" />

        <Button
            android:id="@+id/mainButton"
            android:layout_marginStart="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Enter"
            android:textSize="20sp"
            android:onClick="OnClick"/>

    </LinearLayout>




</LinearLayout>